# hermesd

./: .dockerignore  .gitignore  .loop-state.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
hermesd/: __init__.py  __main__.py  app.py  collector.py  db.py  file_cache.py  models.py  paths.py  theme.py
hermesd/panels/: __init__.py  config_panel.py  cron.py  curator_panel.py  formatting.py  gateway.py  kanban.py  logs.py  memory_panel.py  operations.py  overview.py  profiles.py  sessions.py  tokens.py  tools.py
tests/: conftest.py  test_app.py  test_app_extended.py  test_collector.py  test_collector_coverage.py  test_collector_extended.py  test_contract.py  test_cost_estimation.py  test_cron_panel.py  test_curator.py  test_curator_panel.py  test_curator_resilience.py  test_db.py  test_db_extended.py  test_db_resilience.py  test_file_cache.py  test_formatting.py  test_gateway_resilience.py  test_import_hygiene.py  test_main.py  test_markup_safety.py  test_memory_panel.py  test_models.py  test_panels.py  test_panels_extended.py  test_profiles.py  test_profiles_panel.py  test_readonly_invariant.py  test_session_active.py  test_skills_panel.py  test_theme.py  test_tools_panel.py
