[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermesd"
version = "2026.4.9"
description = "TUI monitoring dashboard for Hermes AI agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nous Research"},
    {name = "Ion Mudreac", email = "mudreac@gmail.com"},
]
keywords = ["hermes", "agent", "dashboard", "tui", "monitoring", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=14.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/mudrii/hermesd"
Repository = "https://github.com/mudrii/hermesd"
Issues = "https://github.com/mudrii/hermesd/issues"
Changelog = "https://github.com/mudrii/hermesd/blob/main/CHANGELOG.md"

[project.scripts]
hermesd = "hermesd.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "N",
    "RUF",
]
ignore = [
    "E501",
    "RET504",
    "SIM108",
    "B008",
    "B904",
    "N818",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = "hermesd.db"
disallow_any_explicit = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.hatch.build.targets.sdist]
include = ["hermesd/", "tests/", "LICENSE", "README.md", "CHANGELOG.md"]
